<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_logo"
    tools:context=".Activities.SecretQuestionActivity">

    <EditText
        android:id="@+id/email_field"
        android:layout_width="345dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/lightGrey"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="none|textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <EditText
        android:id="@+id/secret_question_field"
        android:layout_width="345dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/lightGrey"
        android:ems="10"
        android:hint="@string/hint_question"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_field"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/secretAnswer_field"
        android:layout_width="345dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/lightGrey"
        android:ems="10"
        android:hint="@string/hint_answer"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secret_question_field"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secretAnswer_field"
        app:srcCompat="@drawable/button_confirm" />

    <ImageView
        android:id="@+id/button_arrowBack"
        android:layout_width="37dp"
        android:layout_height="29dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962"
        app:srcCompat="@drawable/arrow_left_blue" />


</androidx.constraintlayout.widget.ConstraintLayout>